# cloud-run-sandbox

./: .gitignore  README.md
clients/js/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
clients/js/src/: connection.js  connection.ts  index.js  index.ts  process.js  sandbox.js  sandbox.ts  types.js
clients/js/tests/: connection.test.js  connection.test.ts  process.test.js  sandbox.test.js  sandbox.test.ts
clients/python/: README.md  pyproject.toml
clients/python/src/sandbox/: connection.py  sandbox.py
clients/python/tests/: test_sandbox.py
examples/js/: basic.js  basic.ts  checkpoint.js  checkpoint.ts  filesystem_snapshot.js  filesystem_snapshot.ts  handoff.js  handoff.ts  interactive_shell.js  interactive_shell.ts  lifecycle.js  lifecycle.ts  package-lock.json  package.json  reconnect.js  reconnect.ts
examples/python/: basic.py  checkpoint.py  filesystem_snapshot.py  handoff.py  lifecycle.py  reconnect.py
