[project]
name = "sandbox-client"
version = "0.1.0"
description = "A client library for the Cloud Run Sandbox service."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "google-auth>=2.0.0",
    "requests>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest-timeout>=2.3.1",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
